Fix: Corrected session management syntax and applied cloud CORS wildcard